[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Personagens/Enemy/Enemie_1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Personagens/Inimigos/Gunner 1/Gunner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Personagens/Inimigos/HUD/Life.png" type="Texture" id=3]
[ext_resource path="res://Assets/Particulas/Explosion1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sons/Hit_Hurt.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sons/Laser_Shoot2.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sons/Explosion.wav" type="AudioStream" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ), null, SubResource( 5 ), null, SubResource( 5 ), null ],
"loop": true,
"name": "DAMAGED",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), null ],
"loop": true,
"name": "DEATH",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 40.0

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 4 )

[node name="Enemie_1" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
animation = "idle"
frame = 1
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.21348 )
shape = SubResource( 13 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -8.8463 )
scale = Vector2( 3.2, 4.08463 )

[node name="Shot_Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = -23.6883
margin_top = -49.6926
margin_right = -7.68829
margin_bottom = -45.6926
rect_scale = Vector2( 3, 3 )
max_value = 20.0
value = 15.0
texture_under = SubResource( 14 )
texture_progress = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound_HIT" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Sound_SHOT" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Sound_DEATH" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
[connection signal="area_entered" from="." to="." method="_on_Enemie_1_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Shot_Timer" to="." method="_on_Shot_Timer_timeout"]
[connection signal="finished" from="Sound_DEATH" to="." method="_on_Sound_DEATH_finished"]
